# fastApiAerospaceAgro

./: .env  .gitignore  Dockerfile  README.md  file.html  main.py  pyproject.toml  requirments.txt
basic_code/: const.py  main.py
basic_code/scripts/: basic_code_func.py
geojson_files/apiquery/: Sentinel-2-S2MSI2A-98ad015e679e2297f73646e74f83492b-20220518-20220523-0-80.csv  Sentinel-2-S2MSI2A-98ad015e679e2297f73646e74f83492b-20220520-20220525-0-80.csv
geojson_files/products/: 0d6e5362-b68a-4b08-a6bb-7d0462a851d2-MTD_MSIL2A.xml  93cd2be9-35b3-4944-a893-421fe5f31592-MTD_MSIL2A.xml
geojson_files/tmp/: 2022-05-23-NDVI-10m-2752d8e18a064afe861814bbe3060476.tiff
